# newbot

./: .gitignore  README.md
docs/: ros代码运行方法.md  ros环境安装.md
docs/python_demo_docs/: lcd显示表情.md  nfs安装和ssh配置.md  snowboy的安装和使用.md
newbot_ws/src/asr_process/: CMakeLists.txt  package.xml
newbot_ws/src/asr_process/cfg/: asr.cfg
newbot_ws/src/asr_process/launch/: asr_process.launch
newbot_ws/src/asr_process/src/: asr.cpp  asr.h  asr_process.cpp  asr_process.h
newbot_ws/src/audio/: CMakeLists.txt  package.xml
newbot_ws/src/audio/launch/: audio.launch
newbot_ws/src/audio/scripts/: asr.py  audio.py  cut_wav.py  database.py  emoji.py  lcd.py  llm.py  mail.py  qr_code.py  record.py  test.py  tts.py  tts_con_wifi.py
newbot_ws/src/base_control/: CMakeLists.txt  package.xml
newbot_ws/src/base_control/cfg/: Base.cfg
newbot_ws/src/base_control/launch/: base_control.launch
newbot_ws/src/base_control/src/: base_control.cpp  base_control.h  pid.cpp  pid.h  uart.cpp  uart.h
newbot_ws/src/face_detect/: package.xml
newbot_ws/src/face_detect/launch/: face_detect.launch
newbot_ws/src/face_detect/scripts/: face_detect.py  lcd.py
newbot_ws/src/img_decode/: CMakeLists.txt  package.xml
newbot_ws/src/img_decode/launch/: img_decode.launch
newbot_ws/src/img_decode/src/: img_decode.cpp  img_decode.h  mpp_decode.cpp  mpp_decode.h
newbot_ws/src/img_encode/: CMakeLists.txt  package.xml
newbot_ws/src/img_encode/launch/: img_encode.launch
newbot_ws/src/img_encode/src/: img_encode.cpp  img_encode.h  mpp_encode.cpp  mpp_encode.h  rga_cvtcolor.cpp  rga_cvtcolor.h
newbot_ws/src/img_rect/: CMakeLists.txt  package.xml
newbot_ws/src/img_rect/launch/: img_rect.launch
newbot_ws/src/img_rect/src/: img_rect.cpp  img_rect.h
newbot_ws/src/move_action/: CMakeLists.txt  package.xml
newbot_ws/src/move_action/action/: DoMove.action
newbot_ws/src/move_action/launch/: move_action.launch
newbot_ws/src/move_action/src/: move_client.cpp  move_client_cmd.cpp  move_client_find_charger.cpp  move_server.cpp
newbot_ws/src/newbot_urdf/: CMakeLists.txt  package.xml
newbot_ws/src/newbot_urdf/launch/: display.launch  gazebo.launch
newbot_ws/src/newbot_urdf/meshes/: base_footprint.STL  c_wheel.STL  camera_link.STL  l_wheel.STL  laser_link.STL  r_wheel.STL
newbot_ws/src/newbot_urdf/urdf/: newbot_urdf.csv  newbot_urdf.urdf
newbot_ws/src/object_track/: CMakeLists.txt  package.xml
newbot_ws/src/object_track/cfg/: fisheye.yml
newbot_ws/src/object_track/launch/: object_track.launch
newbot_ws/src/object_track/src/: object_track.cpp
newbot_ws/src/pkg_launch/: package.xml
newbot_ws/src/pkg_launch/launch/: all.launch  cap.launch  chat.launch  lidar.launch  rviz.launch  urdf.launch
newbot_ws/src/pkg_launch/rviz/: robot.rviz
newbot_ws/src/rknn_yolov6/: CMakeLists.txt  package.xml
newbot_ws/src/rknn_yolov6/src/: main.cpp  postprocess.cpp  rknn_run.cpp  rknn_run.h
newbot_ws/src/robot_navigation/: CMakeLists.txt  package.xml
newbot_ws/src/robot_navigation/config/robot/: amcl_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  move_base_params.yaml
newbot_ws/src/robot_navigation/config/robot_master_raw/: dwa_local_planner_params.yaml  teb_local_planner_params.yaml
newbot_ws/src/robot_navigation/launch/: blank_map_move_base.launch  explore.launch  move_base.launch  robot_navigation.launch  robot_slam.launch
newbot_ws/src/robot_navigation/launch/slam/: gmapping.launch
newbot_ws/src/robot_navigation/maps/: map.pgm
newbot_ws/src/robot_navigation/rviz/: robot.rviz
newbot_ws/src/usb_camera/: CMakeLists.txt  package.xml
newbot_ws/src/usb_camera/launch/: usb_camera.launch
newbot_ws/src/usb_camera/src/: usb_camera.cpp  v4l2.h
newbot_ws/src/ydlidar/: CMakeLists.txt
newbot_ws/src/ydlidar/launch/: X2.launch
newbot_ws/src/ydlidar/src/: ydlidar_node.cpp
python_demo/circular_lcd/: emoji.py  lcd.py  uart.py  video2image.py  wakeup.py
python_demo/circular_lcd/docs/: lcd显示表情.md  nfs安装和ssh配置.md  snowboy的安装和使用.md
python_demo/circular_lcd/snowboy/: snowboydecoder.py
python_demo/circular_lcd/snowboy/resources/: wei_xiao.pmdl  xiang_you_zhuan.pmdl  xiang_zuo_zhuan.pmdl  xiaoaitongxue.pmdl  zha_yan.pmdl
